SharpAlg/Native/Parser/SharpAlg.ATG
COMPILER SharpAlg

/*--------------------------------------------------------------------------*/
CHARACTERS
  letter = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".
  digit = "0123456789".
  cr  = '\r'.
  lf  = '\n'.
  tab = '\t'.

TOKENS
  identifier  = letter {letter | digit}.
  number = digit {digit}.

IGNORE cr + lf + tab

PRODUCTIONS

SharpAlg 										(. Expr expr; .)
= AdditiveExpression<out expr>					(. this.Expr = expr; .)
.

AdditiveExpression<out Expr expr>				(. BinaryOperation operation; Expr rightExpr; .)			
= MultiplicativeExpression<out expr>
	{
	AdditiveOperation<out operation> 
	MultiplicativeExpression<out rightExpr>		(. expr = Expr.Binary(expr, rightExpr, operation); .)
	}
.

AdditiveOperation<out BinaryOperation operation>
=												(. operation = BinaryOperation.Add; .)
  ( '+'
  | '-'											(. operation = BinaryOperation.Subtract; .)
  )
.

MultiplicativeExpression<out Expr expr>			(. BinaryOperation operation; Expr rightExpr; .)			
= Terminal<out expr>
	{
	MultiplicativeOperation<out operation> 
	Terminal<out rightExpr>						(. expr = Expr.Binary(expr, rightExpr, operation); .)
	}
.

MultiplicativeOperation<out BinaryOperation operation>
=												(. operation = BinaryOperation.Multiply; .)
  ( '*'
  | '/'											(. operation = BinaryOperation.Divide; .)
  )
.


Terminal<out Expr expr>							(. expr = null; .)
=	
	(number										(. expr = Expr.Constant(Int32.Parse(t.val)); .)
	| '('AdditiveExpression<out expr>')'
	| identifier								(. expr = Expr.Parameter(t.val); .)
	)
.

END SharpAlg.
